# fushigi3d

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml
config/: default.toml
crates/fushigi3d-fx/: Cargo.toml
crates/fushigi3d-fx/shaders/: bloom_blur.wgsl  bloom_combine.wgsl  bloom_threshold.wgsl  chromatic_ab.wgsl  color_grading.wgsl  film_grain.wgsl  fullscreen.wgsl  outline.wgsl  particle.wgsl  tonemapping.wgsl  vignette.wgsl
crates/fushigi3d-fx/src/: effect.rs  fullscreen.rs  lib.rs
crates/fushigi3d-fx/src/effects/: bloom.rs  chromatic_ab.rs  color_grading.rs  film_grain.rs  mod.rs  outline.rs  tonemapping.rs  vignette.rs
crates/fushigi3d-fx/src/particles/: mod.rs  system.rs
scripts/: mp_tracker.py  requirements.txt  setup.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: capture.rs  mod.rs  vad.rs
src/avatar/: assets.rs  expression.rs  mod.rs  state.rs
src/output/: browser.rs  mod.rs  obs.rs  sse.rs
src/tracking/: mediapipe.rs  mod.rs  osf.rs  subprocess.rs  vmc.rs
src/ui/: animation.rs  app.rs  blendshape_map.rs  body_ik.rs  mod.rs  renderer.rs  shader.wgsl  skinning.rs  smoothing.rs  spring_bone.rs  viewport.rs  vrm_loader.rs
src/web/: api.rs  htmx.rs  mod.rs  routes.rs
static/: sse.js  style.css
