[package]
name = "fushigi3d"
version = "0.1.0"
edition = "2021"
description = "Headless VTuber/PNGTuber service for Linux"
authors = ["Fushigi3D Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/fushigivt/fushigi3d"

[dependencies]
signal-smooth = "0.1.0"

# Audio & VAD
cpal = "0.15"
alsa = "0.9"
voice_activity_detector = { version = "0.2", optional = true }
rubato = "0.16"

# OBS WebSocket
obws = "0.14"

# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
askama = "0.12"
askama_axum = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# VMC Protocol
rosc = "0.10"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP Client (for integration)
reqwest = { version = "0.12", features = ["json"] }

# Image
image = "0.25"

# Native UI (optional)
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "wgpu", "persistence", "x11", "wayland"] }
egui_extras = { version = "0.31", optional = true, features = ["image"] }

# 3D VRM rendering (optional, used with native-ui)
gltf = { version = "1", optional = true, features = ["extras"] }
glam = { version = "0.29", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Theming (optional, used with native-ui)
catppuccin-egui = { version = "5.5", optional = true, default-features = false, features = ["egui31"] }

# Easing curves (optional, used with native-ui for expression transitions)
easer = { version = "0.3", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Cross-thread communication
crossbeam-channel = "0.5"
parking_lot = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["silero-vad", "native-ui"]
silero-vad = ["dep:voice_activity_detector"]
native-ui = ["eframe", "egui_extras", "gltf", "glam", "bytemuck", "catppuccin-egui", "easer"]

[profile.release]
lto = true
opt-level = "z"
strip = true
